--- a/src/app/app/core/header/header.html
+++ b/src/app/app/core/header/header.html
@@ -34,7 +34,7 @@
     <li routerLink="/nintendo">Nintendo</li>
     <li routerLink="/playstation">Accesorios</li>
      <!-- <li routerLink="/Smartphone">Celulares</li> -->
-    <li routerLink="/contact">Contactenos</li>
+    <li routerLink="/contact">Contáctanos</li>
   </ul>
 </nav>
 
