--- a/src/app/pages/smartphone/smartphone.html
+++ b/src/app/pages/smartphone/smartphone.html
@@ -30,7 +30,7 @@
     </p>-->
 
     <!-- Botón -->
-    <button class="btn">Ver mas</button>
+    <button class="contact">Contáctanos</button>
 
   </div>
 </div>
