--- a/src/app/pages/playstation/playstation.html
+++ b/src/app/pages/playstation/playstation.html
@@ -31,7 +31,7 @@
     </p>
 -->
     <!-- Botón -->
-    <button class="btn" routerLink="/contact">contactanos</button>
+    <button class="btn" routerLink="/contact">Contáctanos</button>
 
   </div>
 </div>
