--- a/src/app/pages/xbox/xbox.html
+++ b/src/app/pages/xbox/xbox.html
@@ -30,7 +30,7 @@
     </p>
 -->
     <!-- Botón -->
-    <button class="btn" routerLink="/contact">contactanos</button>
+    <button class="btn" routerLink="/contact">Contáctanos</button>
 
   </div>
 </div>
