Phone node chance

--- a/src/app/app/core/footer/footer.html
+++ b/src/app/app/core/footer/footer.html
@@ -1,56 +1,44 @@
-<footer class="footer">
-
+<div class="footer">
     <div class="footer-container">
 
-        <div class="footer-section">
-            <div class="footer-logo-container">
-                <img src="assets/Logo.png" class="footer-logo" alt="logo" />
-                
+        <div class="footer-section footer-logo-container">
+            <img src="assets/Logo.png" alt="Logo Centro Store" class="footer-logo">
+            <p class="logo-name">CENTRO</p>
+            
+            <div class="footer-social">
+                <a href="#" aria-label="TikTok"><i class="fab fa-tiktok"></i></a>
+                <a href="#" aria-label="Facebook"><i class="fab fa-facebook-f"></i></a>
             </div>
-            <!-- REDES SOCIALES -->
-    <div class="footer-social">
-      <!--<a href="https://www.instagram.com/nylankmunozmusik" target="_blank" rel="noopener noreferrer">
-        <img src="assets/banner/instagram.png" alt="Instagram" />
-      </a>-->
-
-      <a href="https://www.tiktok.com/@brayan920304?_r=1&_t=ZS-91mh7PGaJVv" target="_blank" rel="noopener noreferrer">
-        <img src="assets/banner/tik.png" alt="TikTok" />
-      </a>
-
-      <a href="https://www.facebook.com/share/17fM4Fdf2m/" target="_blank" rel="noopener noreferrer">
-        <img src="assets/banner/face.png" alt="Facebook" />
-      </a>
-    </div>
         </div>
-
+        
         <div class="footer-section">
             <h3 class="location-title">Nuestra Tienda en Bogotá D.C</h3>
-            <p class="location-text">
-                Bogotá, Colombia
-            </p>
+            <p>Carrera 45 # 100 - 50</p>
+            <p>Bogotá, Colombia</p>
+            <p>+57 320 9365273</p>
         </div>
 
         <div class="footer-section">
             <h3>Categorías</h3>
             <ul>
-  <li><a routerLink="/playstation">Accesorios</a></li>
-  <li><a routerLink="/nintendo">Nintendo</a></li>
-  <li><a routerLink="/xbox">Xbox</a></li>
-  <!--<li><a routerLink="/Smartphone">Smartphones</a></li>  -->
-</ul>
+                <li><a routerLink="/xbox">Xbox</a></li>
+                <li><a routerLink="/nintendo">Nintendo</a></li>
+                <li><a routerLink="/playstation">Accesorios</a></li>
+                </ul>
         </div>
-
+        
         <div class="footer-section">
             <h3>Enlaces de interés</h3>
             <ul>
                 <li><a routerLink="/contact">Contacto</a></li>
+                <li><a routerLink="/about">Acerca de</a></li>
+                <li><a routerLink="/terms">Términos y Condiciones</a></li>
             </ul>
         </div>
 
     </div>
 
     <div class="footer-bottom">
-        © 2025 Tu Empresa - Todos los derechos reservados
+        <p>© 2025 Tu Empresa - Todos los derechos reservados</p>
     </div>
-
-</footer>
+</div>
