--- a/src/app/app/pages/home/home.scss
+++ b/src/app/app/pages/home/home.scss
@@ -45,14 +45,15 @@
 
 /* Estilos de Imagen (CLAVE: object-fit: cover) */
 .marketing-img {
-    width: 100%; 
-    height: 101%; 
-    object-fit: cover; /* Cambiado a cover para llenar el espacio */
+   width: 100%; 
+    height: 100%; /* Ajustar al 100% del contenedor */
+    /* Mantener cover para eliminar bordes, pero el contenedor definirá el recorte */
+    object-fit: cover; 
     position: absolute; 
     top: 0;
     left: 0;
     z-index: 1; 
-    margin: auto; 
+    margin: auto;
 }
 
 /* Contenedor de Contenido (para el botón) */
