--- a/src/app/app/core/header/header.html
+++ b/src/app/app/core/header/header.html
@@ -2,13 +2,15 @@
   <div class="main-content-wrapper">
     <div class="left">
 
+      <!-- Botón menú -->
       <div class="menu-btn" (click)="onToggleSidebar()" aria-label="Abrir menú">
         ☰
       </div>
 
+      <!-- Logo y texto CENTRO agrupados para centrado -->
       <div class="logo-group">
         <img src="assets/Logo.png" alt="Logo" class="logo">
-        
+       
       </div>
     </div>
 
@@ -17,6 +19,7 @@
       <button>🔍</button>
     </div>
 
+    <!-- LADO DERECHO (Número y Envíos) -->
     <div class="right">
       <span class="contact-info">📞 +57 320 9365273</span>
       <span class="contact-info">🌎 Envíos a nivel nacional</span>
@@ -30,6 +33,8 @@
     <li routerLink="/xbox">Xbox</li>
     <li routerLink="/nintendo">Nintendo</li>
     <li routerLink="/playstation">Accesorios</li>
-      <li routerLink="/contact">Contáctanos</li>
+     <!-- <li routerLink="/Smartphone">Celulares</li> -->
+    <li routerLink="/contact">Contáctanos</li>
   </ul>
 </nav>
+
