--- a/src/app/app.scss
+++ b/src/app/app.scss
@@ -66,8 +66,8 @@
 }
 
 .content {
-  margin-left: 55px;
-  padding-top: 80px; /* espacio para el header */
+   margin-left: 55px;
+  padding-top: 10px; /* antes 80px */
 }
 .main-content {
   margin-left: 80px; /* el mismo ancho de tu sidebar */
