--- a/src/app/app/core/header/header.html
+++ b/src/app/app/core/header/header.html
@@ -21,8 +21,8 @@
 
     <!-- LADO DERECHO (Número y Envíos) -->
     <div class="right">
-      <span class="contact-info">📞 +57 320 9365273</span>
-      <span class="contact-info">🌎 Envíos a nivel nacional</span>
+      <span class="contact-info">📞3209365273</span>
+      <span class="contact-info">🌎Envíos</span>
     </div>
   </div>
 </header>
