--- a/src/app/pages/home-carousel/home-carousel.html
+++ b/src/app/pages/home-carousel/home-carousel.html
@@ -1,3 +1,5 @@
+<div class="home-carousel">
+  
 <div class="carousel">
 
   <div class="slides">
@@ -19,5 +21,7 @@
       [class.active]="i === currentIndex">
     </span>
   </div>
+
+</div>
 
 </div>
