chance about image and play5

--- a/src/app/app/core/footer/footer.html
+++ b/src/app/app/core/footer/footer.html
@@ -33,9 +33,10 @@
         <div class="footer-section">
             <h3>Categorías</h3>
             <ul>
-  <li><a routerLink="/playstation">Accesorios</a></li>
+  <li><a routerLink="/playstation">Mas productos</a></li>
   <li><a routerLink="/nintendo">Nintendo</a></li>
   <li><a routerLink="/xbox">Xbox</a></li>
+  <li><a routerLink="/playstation">Playstation</a></li>
   <!--<li><a routerLink="/Smartphone">Smartphones</a></li>  -->
 </ul>
         </div>
