--- a/src/app/app/core/header/header.html
+++ b/src/app/app/core/header/header.html
@@ -32,8 +32,8 @@
     <li routerLink="/Home">Inicio</li>
     <li routerLink="/xbox">Xbox</li>
     <li routerLink="/nintendo">Nintendo</li>
-    <li routerLink="/playstation">Accesorios</li>
-     <!-- <li routerLink="/Smartphone">Celulares</li> -->
+    <li routerLink="/playstation">PlayStation</li>
+    <li routerLink="/Accesorios">Mas productos</li>    
     <li routerLink="/contact">Contáctanos</li>
   </ul>
 </nav>
