--- a/src/app/app/pages/home/home.html
+++ b/src/app/app/pages/home/home.html
@@ -21,7 +21,7 @@
             <div class="marketing-card new-card">
               <img src="assets/banner/smartphone_brands.png" alt="Celulares de Todas las Marcas" class="marketing-img">
               <div class="card-content">
-                <button class="btn-vermas" routerLink="/Smartphone">Ver Más</button>
+                <button class="btn-vermas" routerLink="/Accesorios">Ver Más</button>
               </div>
             </div>
 
@@ -35,10 +35,7 @@
         </div>
     </div>
 
-
   </div>
-  <!-- 🔴 FIN DEL CONTENEDOR PRINCIPAL ASIMÉTRICO -->
-
 
   <section class="categories"></section>
 
@@ -51,20 +48,26 @@
         <img src="assets/banner/Nintendocategory.png" alt="Nintendo" />
         <p>Nintendo</p>
       </div>
-
+<!-- 
       <div class="category-card" routerLink="/Smartphone">
         <img src="assets/banner/Smartphonecategory.png" alt="Smartphone" />
         <p>Smartphones</p>
-      </div>
+      </div>  
+  --->    
 
       <div class="category-card" routerLink="/xbox">
         <img src="assets/banner/Xboxcategory.png" alt="Xbox" />
         <p>Xbox</p>
       </div>
 
-      <div class="category-card" routerLink="/playstation">
-        <img src="assets/Image/moto2.jpeg" alt="PlayStation" />
-        <p>Accesorios</p>
+        <div class="category-card" routerLink="/playstation">
+        <img src="assets/banner/Playcategory.png" alt="PlayStation" />
+        <p>PlayStation</p>
+      </div>
+
+      <div class="category-card" routerLink="/Accesorios">
+        <img src="assets/Image/controlxbox1.jpeg" alt="PlayStation" />
+        <p>Mas productos</p>
       </div>
 
     </div>
