--- a/src/app/pages/smartphone/smartphone.html
+++ b/src/app/pages/smartphone/smartphone.html
@@ -1,4 +1,4 @@
-<h1 class="page-title">SmortPhone</h1>
+<h1 class="page-title">Celulares</h1>
  <div class="grid">
   <div class="card" *ngFor="let item of products">
 
