--- a/src/app/shared/side-menu/side-menu.html
+++ b/src/app/shared/side-menu/side-menu.html
@@ -7,8 +7,8 @@
       Celulares
     </li>
     <li>
-      <img src="assets/icons/playstation.svg">
-      Accesorios
+      <img src="assets/icons/Accesorios.svg">
+      PlayStation
     </li>
     <li>
       <img src="assets/icons/xbox.svg">
@@ -17,6 +17,10 @@
     <li>
       <img src="assets/icons/nintendo.svg">
       Nintendo
+    </li>
+     <li>
+      <img src="assets/icons/Accesorios.svg">
+      Mas productos
     </li>
   </ul>
 </div>
