--- a/src/app/shared/sidebar/sidebar.html
+++ b/src/app/shared/sidebar/sidebar.html
@@ -7,7 +7,7 @@
 
     <li (click)="select('PlayStation')">
       <img src="assets/icons/playstation.svg" alt="PlayStation" />
-      <span>Acessorios</span>
+      <span>PlayStation</span>
     </li>
 
     <li (click)="select('Xbox')">
@@ -18,6 +18,10 @@
     <li (click)="select('Smartphone')">
       <img src="assets/icons/smartphone.svg" alt="Smartphone" />
       <span>Smartphone</span>
+    </li>
+    <li (click)="select('Accesorios')">
+      <img src="assets/icons/control.svg" alt="Accesorios" />
+      <span>Mas productos</span>
     </li>
   </ul>
 </div>
