--- a/src/app/pages/accesorios/accesorios.html
+++ b/src/app/pages/accesorios/accesorios.html
@@ -1,6 +1,5 @@
-<h1 class="page-title">PlayStation</h1>
-
-<div class="grid">
+<h1 class="page-title">Mas productos</h1>
+ <div class="grid">
   <div class="card" *ngFor="let item of products">
 
      <!-- Imagen -->
@@ -28,10 +27,10 @@
     <!-- Precio 
     <p class="price">
       $ {{ item.price | number:'1.0-0' }}
-    </p>
--->
+    </p>-->
+
     <!-- Botón -->
-    <button class="btn" routerLink="/contact">Contáctanos</button>
+    <button class="contact">Contáctanos</button>
 
   </div>
 </div>
