--- a/src/app/pages/nintendo/nintendo.scss
+++ b/src/app/pages/nintendo/nintendo.scss
@@ -88,7 +88,7 @@
   font-size: 3em;
  font-weight: 900;
  text-align: center;
- color: #e4000f; // Rojo vibrante de Nintendodddddd
+ color: #0f1ec5; // Rojo vibrante de Nintendodddddd
  text-transform: uppercase;
  letter-spacing: 5px;
  margin: 30px 0 20px;
