without header option

--- a/src/app/app/core/header/header.html
+++ b/src/app/app/core/header/header.html
@@ -33,7 +33,7 @@
     <li routerLink="/xbox">Xbox</li>
     <li routerLink="/nintendo">Nintendo</li>
     <li routerLink="/playstation">PlayStation</li>
-    <li routerLink="/Accesorios">Mas productos</li>    
+    <!-- <li routerLink="/Accesorios">Mas productos</li>  -->   
     <li routerLink="/contact">Contáctanos</li>
   </ul>
 </nav>
