without header option

--- a/src/app/app/core/header/header.html
+++ b/src/app/app/core/header/header.html
@@ -34,7 +34,7 @@
     <li routerLink="/nintendo">Nintendo</li>
     <li routerLink="/playstation">PlayStation</li>
     <!-- <li routerLink="/Accesorios">Mas productos</li>  -->   
-    <li routerLink="/contact">Contáctanos</li>
+    <li routerLink="/contact">Contacto</li>
   </ul>
 </nav>
 
